<resources>
    <string name="app_name">Delete</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="vaccinator">Vaccinator</string>
    <string name="vaccinatoricon">VaccinatorIcon</string>
    <string name="don_t_have_an_account_register">Don\'t Have an Account? Register</string>
    <string name="login">Login</string>
    <string name="Applogo">AppLogo</string>
    <string name="Appmenu">AppMenu</string>
    <string name="Vaccinator">Vaccinator</string>
    <string name="createslot">CreateSlot</string>
    <string name="create_new_slot">Create New Slot</string>
    <string name="updateslot">UpdateSlot</string>
    <string name="update_slot_details">Update Slot Details</string>
    <string name="deleteslot">deleteSlot</string>
    <string name="delete_slot">Delete Slot</string>
    <string name="available_slots">Available Slots</string>
    <string name="karur">Karur</string>
    <string name="_16_to_25_sep_2023">16 to 25 Sep 2023</string>
    <string name="logo2">logo2</string>
    <string name="Vaccinator1">Vaccinator</string>
    <string name="menu1">menu1</string>
    <string name="affected">Affected</string>
    <string name="_6_67_765">6,67,765</string>
    <string name="death">Death</string>
    <string name="_9_750">9,750</string>
    <string name="recovered">Recovered</string>
    <string name="_5_765">5,765</string>
    <string name="active">Active</string>
    <string name="_3_70_567">3,70,567</string>
    <string name="serious">Serious</string>
    <string name="_12_786">12,786</string>
    <string name="successfully_vaccinated">Successfully Vaccinated</string>
    <string name="you_are_safe">You are SAFE</string>
    <string name="book_vaccine_slot_here">Book Vaccine Slot Here</string>
    <string name="prevention">Prevention</string>
    <string name="as_we_commemorate_one_year_since_the_advent_of_the_covid_19_pandemic_it_is_imperative_to_maintain_a_steadfast_commitment_to_safety_precautions_vigilance_remains_our_strongest_ally_wear_masks_diligently_practice_social_distancing_rigorously_and_consistently_sanitize_hands_embrace_the_power_of_vaccination_as_a_pivotal_defense_against_the_virus_contributing_to_individual_and_collective_immunity_the_pandemic_underscores_the_importance_of_resilient_communities_and_global_cooperation_let_s_stand_united_in_prioritizing_health_fostering_empathy_and_adopting_responsible_actions_together_we_can_navigate_these_challenging_times_and_build_a_healthier_more_resilient_future_for_all">As we commemorate one year since the advent of the COVID-19 pandemic, it is imperative to maintain a steadfast commitment to safety precautions. Vigilance remains our strongest ally—wear masks diligently, practice social distancing rigorously, and consistently sanitize hands. Embrace the power of vaccination as a pivotal defense against the virus, contributing to individual and collective immunity. The pandemic underscores the importance of resilient communities and global cooperation. Let\'s stand united in prioritizing health, fostering empathy, and adopting responsible actions. Together, we can navigate these challenging times and build a healthier, more resilient future for all.</string>
    <string name="_1_to_10_oct_2023">1 to 10 Oct 2023</string>
    <string name="_20_to_28_oct_2023">20 to 28 Oct 2023</string>
    <string name="_2_to_15_nov_2023">2 to 15 Nov 2023</string>
    <string name="new_york">New York</string>
    <string name="salem">Salem</string>
    <string name="vellakovil">Vellakovil</string>
    <string name="book_slot">Book Slot</string>
    <string name="enter_city_district">Enter city/district</string>
    <string name="booking_your_slot">Booking Your Slot</string>
    <string name="adhaar_no">Adhaar No.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="city_district">City/District</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="date">Date</string>
    <string name="enter_your_adhaar_no">Enter your adhaar no</string>
    <string name="ok">OK</string>
    <string name="_3">3</string>
    <string name="city">City :</string>
    <string name="new_york_city">New York</string>
    <string name="_2_to_15_nov_2023_1">2 to 15 Nov 2023</string>
    <string name="date1">Date :</string>
    <string name="count">Count :</string>
    <string name="slot_details">Slot Details</string>
    <string name="logout">Logout</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
</resources>