<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/booking_your_slot"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"/>

        <EditText
            android:autofillHints="EnterName"
            android:id="@+id/editTextText1"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/enter_your_name"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adhaar_no"
            android:textSize="24sp"/>

        <EditText
            android:autofillHints="EnterAadhaar"
            android:id="@+id/editTextText2"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/enter_your_adhaar_no"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="24sp"/>

        <EditText
            android:autofillHints="EnterDate"
            android:id="@+id/editTextDate2"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="date"
            android:hint="@string/dd_mm_yyyy"/>


        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_district"
            android:textSize="24sp"/>

        <EditText
            android:autofillHints="EnterCity"
            android:id="@+id/editTextText3"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/enter_city_district"
            android:inputType="text" />

        <Button
            android:id="@+id/dataFilled"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:text="@string/book_slot"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>