<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5B2142F6">



    <ImageView
        android:contentDescription="@string/Vaccinator"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/editTextEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:textColorHint="#ffffff"
            android:drawableStart="@drawable/email"
            android:padding="16dp"
            android:drawablePadding="18dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:background="@drawable/edittext_background"/>

        <EditText
            android:autofillHints="password"
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#ffffff"
            android:drawableStart="@drawable/password"
            android:padding="16dp"
            android:drawablePadding="18dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:background="@drawable/edittext_background"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:text="@string/don_t_have_an_account_register"
            android:textAlignment="center"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <ImageView
        android:contentDescription="@string/vaccinatoricon"
        android:id="@+id/imageView6"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>