<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    android:id="@+id/parentMain">


    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawerLayout"
        android:layout_gravity="end"
        tools:openDrawer="right"
        android:fitsSystemWindows="true">

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/navView"
            android:layout_gravity="end"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/nav_menu"
            app:itemIconTint="#1E96F6" />

    </androidx.drawerlayout.widget.DrawerLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1">



        <ImageView
            android:contentDescription="@string/Applogo"
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ImageView
            android:contentDescription="@string/Appmenu"
            android:id="@+id/menuImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_menu_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/armata"
            android:text="@string/Vaccinator"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/menuImage"
            app:layout_constraintLeft_toRightOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>





    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/layTop"
        android:id="@+id/linear1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="101dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/createSlot"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#4CAF50"
            app:cardCornerRadius="14dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/createLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:paddingStart="80dp"
                android:paddingEnd="30dp">


                <ImageView
                    android:contentDescription="@string/createslot"
                    android:id="@+id/plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_add"
                    app:layout_constraintLeft_toLeftOf="@id/createLayout"
                    app:layout_constraintRight_toLeftOf="@id/create"
                    app:layout_constraintBottom_toBottomOf="@id/createLayout"
                    app:layout_constraintTop_toTopOf="@id/createLayout"
                    tools:layout_editor_absoluteX="50dp" />

                <TextView
                    app:layout_constraintTop_toTopOf="@id/createLayout"
                    app:layout_constraintBottom_toBottomOf="@id/createLayout"
                    android:id="@+id/create"
                    app:layout_constraintRight_toRightOf="@id/createLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    app:layout_constraintStart_toEndOf="@id/plus"
                    android:text="@string/create_new_slot"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="RtlSymmetry" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/deleteSlot"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#E6F61F0F"
            app:cardCornerRadius="14dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/deleteLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:paddingStart="80dp"
                android:paddingEnd="30dp">


                <ImageView
                    android:contentDescription="@string/deleteslot"
                    app:layout_constraintLeft_toLeftOf="@id/deleteLayout"
                    app:layout_constraintRight_toLeftOf="@id/delete"
                    android:id="@+id/deleteIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="@id/deleteLayout"
                    app:layout_constraintTop_toTopOf="@id/deleteLayout"
                    tools:layout_editor_absoluteX="50dp" />

                <TextView
                    app:layout_constraintTop_toTopOf="@id/deleteLayout"
                    app:layout_constraintBottom_toBottomOf="@id/deleteLayout"
                    app:layout_constraintRight_toRightOf="@id/deleteLayout"
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    app:layout_constraintStart_toEndOf="@id/deleteIcon"
                    android:text="@string/delete_slot"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="RtlSymmetry" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/avSlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/parentMain"
        android:text="@string/available_slots"
        app:layout_constraintLeft_toLeftOf="@id/parentMain"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/avSlot"
        android:id="@+id/linear2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="14dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/slotLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_gravity="start">


                <TextView
                    app:layout_constraintStart_toStartOf="@id/slotLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/slotLayout1"
                    android:text="@string/karur"
                    android:textSize="15sp"
                    android:id="@+id/city1"/>

                <TextView
                    app:layout_constraintStart_toStartOf="@id/slotLayout1"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_16_to_25_sep_2023"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/city1"/>



            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="14dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/slotLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_gravity="start">


                <TextView
                    app:layout_constraintStart_toStartOf="@id/slotLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/slotLayout2"
                    android:text="@string/salem"
                    android:textSize="15sp"
                    android:id="@+id/city2"/>

                <TextView
                    app:layout_constraintStart_toStartOf="@id/slotLayout2"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_to_10_oct_2023"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/city2"/>



            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="14dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/slotLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_gravity="start">


                <TextView
                    app:layout_constraintStart_toStartOf="@id/slotLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/slotLayout3"
                    android:text="@string/vellakovil"
                    android:textSize="15sp"
                    android:id="@+id/city3"/>

                <TextView
                    app:layout_constraintStart_toStartOf="@id/slotLayout3"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_to_28_oct_2023"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/city3"/>



            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="14dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/slotLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_gravity="start">


                <TextView
                    app:layout_constraintStart_toStartOf="@id/slotLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/slotLayout4"
                    android:text="@string/new_york"
                    android:textSize="15sp"
                    android:id="@+id/city4"/>

                <TextView
                    app:layout_constraintStart_toStartOf="@id/slotLayout4"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_to_15_nov_2023"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/city4"/>



            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>